--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+header,body{
+    background-color: darkslateblue;
 }
