--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,9 @@
 }
 .container{
     background-color: #2F303A;
-    height: 80vh;
-    width:95vh;
+    height: 77vh;
+    width: 129vh;
+    margin-left: 200px;
 }   
 #logo{
     padding-left: 20px;
@@ -15,17 +16,22 @@
 }
 .horizonbar{
     float: right;
-    padding-left: 180px;
+    padding-left: 353px;
     padding-right: 40px;
     list-style-type: none;
     padding-bottom: 100px;
+    margin-left: 10px;
+    font-weight: 200;
+    size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .navbar{
-    margin-left: 40px;
+    margin-left: 50px;
     margin-right: 30px;
     margin-top: 40px;
     display: flex;
     padding-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
     
 }
 ul li{
@@ -41,32 +47,41 @@ ul li a{
 li a:hover:not(.active){
     border-bottom: solid 3px royalblue;
 }
-h2{
+h1{
     text-align: right;
-    font-size: 400;
-    margin-top: 100px;
-    margin-right: 250px;
-    margin-left: 0%;
+    margin-top: 2px;
+    margin-right: 225px;
+    margin-left: 0px;
     color: white;
+    font-weight: 400;
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 70px;
+    size: 72px;
 }
 button a{
     background-color: royalblue;
     color: white;
     text-decoration: none;
-    padding: 10px 15px 10px 15px;     
+    padding: 3px 25px 3px 25px;     
     border: solid 6px royalblue;
-    border-radius: 10px;
+    border-radius: 5px;
     cursor: pointer;
 }  
 
 p{
-    margin-right: 99px;
+    margin-right: 48px;
     color: white;
-    margin-left: 10px;
+    margin-left: 30px;
+    padding-top: 2px;
+    font-size: 19px;
+    padding-left: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
 }
 .button{
-    padding-top: 50px;
+    padding-top: 60px;
     margin-right: 330px;
     text-align: right;
+    margin-bottom: 20px;
+    margin-left: 50px;
 }
