--- a/styles3.css
+++ b/styles3.css
@@ -6,27 +6,29 @@
 }
 .container{
     background-color: #2F303A;
-    height: 70vh;
-    width:105vh;
+    margin-right: 200px;
+    margin-left: 200px;
+    margin-top: 30px;
+    height: 67vh;
 }   
 #logo{
     padding-left: 20px;
-    padding-top: 0px;
+    margin-top: 20px;
 }
 .horizonbar{
-    float: right;
-    padding-left: 180px;
-    padding-right: 40px;
+    font-family: Arial, Helvetica, sans-serif;
     list-style-type: none;
     padding-bottom: 100px;
+    margin-left: 300px;
+    font-size: xx-small;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-left: 550px;
 }
 .navbar{
     display: flex;
     margin-left: 40px;
     margin-right: 30px;
-    margin-top: 40px;
-    padding-top: 20px;
-    
 }
 ul li{
     display: inline-block;
@@ -42,8 +44,87 @@ li a:hover:not(.active){
     border-bottom: solid 3px royalblue;
 }   
 footer{
-    background-color: slategray;
-    height: 5vh;
-    width: 95vh;
+    background-color: #202027;
     display: flex;
-}   
+    margin-left: 200px;
+    width: 146.6vh;
+    height: 7vh;
+}
+#link1{
+    display: inline-block;
+    padding-top: 10px;
+    padding-bottom:px;
+    padding-left: 30px;
+    font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#link2{
+    float: right;
+    padding-left: 430px;
+    padding-right: 5px;
+    padding-top: 10px;
+    padding-bottom: px;
+    font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
+}
+h1{
+    transform: translate(-50%,-50%);
+    position: absolute;
+    left: 25%;
+    font-size: xx-large;
+    color: white;
+    bottom: 50%;
+    margin-left: 20px;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+}  
+span{
+    font-size: 43px;
+    color:mediumvioletred;
+}
+.signupbox{
+    float: right;
+    margin-right: 100px;
+    border:#202027 solid 2px;
+    border-radius: 10px;
+    background-color: #202027;
+    width: 52vh;
+    height: 42vh;
+    margin-bottom: 0px;
+    transform: translate(-3%,-10%);
+    top: 150px;
+    left: 190px;
+} 
+form{
+    margin: 20px 20px 20px 20px;
+    padding-top: 0px;
+    padding-left: 15px;
+    padding-bottom: 10px;
+}
+label{
+    color: white;
+    font-size: small;
+    font: optional;
+    padding-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+}
+input{
+    border: 1px solid #1762A7;
+    border-radius: 5px;
+    box-sizing: border-box;
+    width: 40vh;
+    height: 4vh;
+    background-color: #202027;
+    padding-top: 0px;
+    border-spacing: 20px;
+}
+#btn{
+    background-color:#1762A7;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: smaller;
+    font-weight: 100;
+    padding-top: 0px;
+    height: 5vh
+}
