--- a/styles.css
+++ b/styles.css
@@ -6,34 +6,30 @@
 }
 .container{
     background-color: #2F303A;
-    height: 77vh;
-    width: 129vh;
-    margin-left: 200px;
-    position: relative;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
 }   
 #logo{
     padding-left: 20px;
-    padding-top: 0px;
+    margin-top: 20px;
 }
 .horizonbar{
     float: right;
-    padding-left: 353px;
+    padding-left: 355px;
     padding-right: 40px;
     list-style-type: none;
+    margin-top: 20px;
     padding-bottom: 100px;
-    margin-left: 10px;
-    font-weight: 200;
-    size: 10px;
+    margin-left: 575px;
+    font-weight: 900;
+    font-size: small;
     font-family: Arial, Helvetica, sans-serif;
 }
 .navbar{
-    margin-left: 50px;
+    margin-left: 40px;
     margin-right: 30px;
-    margin-top: 40px;
     display: flex;
-    padding-top: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    
 }
 ul li{
     display: inline-block;
@@ -50,14 +46,14 @@ li a:hover:not(.active){
 }
 h1{
     text-align: right;
-    margin-top: 2px;
-    margin-right: 225px;
+    margin-top: 20px;
+    margin-right: 325px;
     margin-left: 0px;
     color: white;
-    font-weight: 400;
+    font-weight: 500;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 70px;
-    size: 72px;
+    size: 92px;
 }
 button a{
     background-color: royalblue;
@@ -68,21 +64,30 @@ button a{
     border-radius: 5px;
     cursor: pointer;
 }  
-
+.content{
+    margin-left: px;
+    padding-left: px;
+}
+.bgpics{
+    justify-content: center;
+    align-items: center;
+    margin-right: 700px;
+    text-align: center;
+}
 p{
-    margin-right: 48px;
+    margin-right: 129px;
     color: white;
     margin-left: 30px;
     padding-top: 2px;
-    font-size: 19px;
+    font-size: 20px;
     padding-left: 30px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
 .button{
     padding-top: 60px;
-    margin-right: 330px;
+    margin-right: 420px;
     text-align: right;
     margin-bottom: 20px;
-    margin-left: 100px;
+    margin-left: 70px;
 }
