--- a/styles3.css
+++ b/styles3.css
@@ -6,10 +6,7 @@
 }
 .container{
     background-color: #2F303A;
-    margin-right: 200px;
-    margin-left: 200px;
-    margin-top: 30px;
-    height: 67vh;
+    height: 100vh;
 }   
 #logo{
     padding-left: 20px;
@@ -19,11 +16,12 @@
     font-family: Arial, Helvetica, sans-serif;
     list-style-type: none;
     padding-bottom: 100px;
-    margin-left: 300px;
-    font-size: xx-small;
+    float: right;
+    padding-left: 430px;
+    font-size: small;
     font-weight: 400;
     margin-top: 20px;
-    margin-left: 550px;
+    margin-left: 520px;
 }
 .navbar{
     display: flex;
@@ -41,18 +39,17 @@ ul li a{
     transition: 0.6s ease;
 }
 li a:hover:not(.active){
-    border-bottom: solid 3px royalblue;
+    border-bottom: solid 3px #1762A7;
 }   
 footer{
     background-color: #202027;
     display: flex;
-    margin-left: 200px;
-    width: 146.6vh;
-    height: 7vh;
+    width: 300vh;
+    height: 9vh;
 }
 #link1{
     display: inline-block;
-    padding-top: 10px;
+    padding-top: 20px;
     padding-bottom:px;
     padding-left: 30px;
     font-size: small;
@@ -60,9 +57,9 @@ footer{
 }
 #link2{
     float: right;
-    padding-left: 430px;
+    padding-left: 900px;
     padding-right: 5px;
-    padding-top: 10px;
+    padding-top: 20px;
     padding-bottom: px;
     font-size: small;
     font-family: Arial, Helvetica, sans-serif;
@@ -74,31 +71,33 @@ h1{
     font-size: xx-large;
     color: white;
     bottom: 50%;
-    margin-left: 20px;
+    top: 50%;
+    margin-left: 40px;
+    margin-top: 30px;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
 }  
 span{
-    font-size: 43px;
+    font-size: 50px;
     color:mediumvioletred;
 }
 .signupbox{
     float: right;
-    margin-right: 100px;
+    margin-right: 20px;
     border:#202027 solid 2px;
     border-radius: 10px;
     background-color: #202027;
-    width: 52vh;
-    height: 42vh;
-    margin-bottom: 0px;
-    transform: translate(-3%,-10%);
+    width: 60vh;
+    height: 60vh;
+    margin-top: 40px;
+    transform: translate(-3%,-3%);
     top: 150px;
-    left: 190px;
+    left: 300px;
 } 
 form{
     margin: 20px 20px 20px 20px;
-    padding-top: 0px;
-    padding-left: 15px;
+    padding-top: 10px;
+    padding-left: 25px;
     padding-bottom: 10px;
 }
 label{
@@ -113,18 +112,17 @@ input{
     border: 1px solid #1762A7;
     border-radius: 5px;
     box-sizing: border-box;
-    width: 40vh;
+    width: 45vh;
     height: 4vh;
     background-color: #202027;
     padding-top: 0px;
     border-spacing: 20px;
 }
 #btn{
-    background-color:#1762A7;
+    background-color: #1762A7;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: smaller;
     font-weight: 100;
-    padding-top: 0px;
-    height: 5vh
+    height: 5vh;
 }
