--- a/styles.css
+++ b/styles.css
@@ -6,24 +6,32 @@
 }
 .container{
     background-color: #2F303A;
-    height: 100vh;
+    height: 98.9vh;
     background-position: center;
     background-size: cover;
 }   
-#logo{
-    padding-left: 20px;
+#logo {
+    padding-left: 10px;
     margin-top: 20px;
+    height: 50px;
+    width: 50px;
+    display: flex;
+}
+h3{
+    padding-top: 15px;
+    color: white;
+    padding-left: 3px;
 }
 .horizonbar{
     float: right;
     padding-left: 355px;
     padding-right: 40px;
     list-style-type: none;
-    margin-top: 20px;
+    margin-top: 30px;
     padding-bottom: 100px;
     margin-left: 575px;
     font-weight: 900;
-    font-size: small;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 .navbar{
@@ -46,33 +54,25 @@ li a:hover:not(.active){
 }
 h1{
     text-align: right;
-    margin-top: 20px;
-    margin-right: 325px;
+    margin-top: px;
+    margin-right: 327px;
     margin-left: 0px;
     color: white;
-    font-weight: 500;
+    font-weight: 525;
     font-family: Arial, Helvetica, sans-serif;
-    line-height: 70px;
-    size: 92px;
-}
-button a{
-    background-color: royalblue;
-    color: white;
-    text-decoration: none;
-    padding: 3px 25px 3px 25px;     
-    border: solid 6px royalblue;
-    border-radius: 5px;
-    cursor: pointer;
-}  
-.content{
-    margin-left: px;
-    padding-left: px;
+    line-height: 72px;
+    size: 100px;
 }
 .bgpics{
-    justify-content: center;
-    align-items: center;
-    margin-right: 700px;
-    text-align: center;
+    height: 500px;
+    width: 300px;
+    margin-top: px;
+    margin-left: 150px;
+    margin-right: 20px;
+}
+.content{
+    float: right;
+    margin-top: 100px;
 }
 p{
     margin-right: 129px;
@@ -84,10 +84,17 @@ p{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
-.button{
-    padding-top: 60px;
-    margin-right: 420px;
-    text-align: right;
-    margin-bottom: 20px;
-    margin-left: 70px;
+.btn{
+    height: 35px;
+    width: 130px;
+    background-color: #1762A7;
+    border-radius: 5px;
+    border: 2px solid #1762A7;
+    margin-top: 60px;
+    margin-left: 62px;
+}
+a{
+    text-decoration: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
