--- a/styles2.css
+++ b/styles2.css
@@ -9,17 +9,25 @@
 }   
 #logo{
     margin-top: 20px;
+    display: flex;
+    height: 50px;
+    width: 50px;
+}
+h3{
+    color: white;
+    margin-top: 15px;
+    padding-left: 5px;
 }
 .horizonbar{
     list-style-type: none;
     padding-bottom: 100px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
-    font-size: small;
+    font-weight: 900;
+    font-size: 20px;
     margin-left: 550px;
-    margin-top: 20px;
+    margin-top: 30px;
     padding-left: 390px;
     float: right;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .navbar{
     display: flex;
@@ -52,38 +60,52 @@ footer{
 #feature1{
     float: left;
     text-align: center;
+    margin-top: 40px;
+    background-color: #202027;
+    height: 130px;
+    margin-right: 30px;
+
 }
 #feature2{
     float: left;
-    text-align: center;
+    margin-top: 40px;
+    margin-right: 30px;
+    background-color: #202027;
+    height: 130px;
 }
 #feature3{
     float: left;
-    text-align: center;
+    margin-top: 40px;
+    background-color: #202027;
+    height: 130px;
 }
 .text2{
-    text-align: center;
     font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: px;
     padding-right: 10px;
-    padding-left: 30px;
+    padding-left: 10px;
+    padding-top: 24px;
 }   
 .text3{
-    text-align: center;
     font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: px;
     padding-right: 10px;
-    padding-left: 30px;
+    padding-left: 10px;
+    padding-top: 24px;
 }
-.text1{
+.imgages{
+    height: 8px;
+    width: 8px;
+    padding-top: 20px;
+    margin-top: 10px;
     text-align: center;
+}   
+.text1{
     font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: px;
-    padding-left: 0px;
+    padding-left: 10px;
     padding-right: 10px;
+    padding-top: 25px;
 }   
 .content{
     margin-left: 40px;
@@ -116,18 +138,19 @@ h1 {
     margin-top: 70px;
 }
 p{
-    padding-top: 8px;
     color: #ffffff;
     size: 46px;
     font-weight: 500;
     font-family: Arial, Helvetica, sans-serif;
     text-align: left;
     line-height: 24px;
-    padding-top: 40px;
-    margin-top: 70px;
+    padding-top: 30px;
+    margin-top: 60px;
 }
-.flex-containerimages{
+.containerimages{
     float: right;
-    text-align: center;
-    margin-bottom: 00px;
+    height: 400px;
+    width: 400px;
+    margin-right: 20px;
+    margin-bottom: 40px;
 }
