--- a/styles3.css
+++ b/styles3.css
@@ -9,19 +9,27 @@
     height: 100vh;
 }   
 #logo{
-    padding-left: 20px;
+    padding-left: 18px;
     margin-top: 20px;
+    display: flex;
+    height: 50px;
+    width: 50px;
+}
+h3{
+    margin-top: 15px;
+    padding-left: 5px;
+    color: white;
 }
 .horizonbar{
-    font-family: Arial, Helvetica, sans-serif;
     list-style-type: none;
     padding-bottom: 100px;
     float: right;
     padding-left: 430px;
-    font-size: small;
-    font-weight: 400;
-    margin-top: 20px;
+    font-size: 20px;
+    font-weight: 900;
+    margin-top: 30px;
     margin-left: 520px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .navbar{
     display: flex;
