--- a/styles2.css
+++ b/styles2.css
@@ -1,17 +1,30 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container{
     background-color: #2F303A;
-    height: 100vh;
+    height: 91vh;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
 }   
 #logo{
     margin-top: 20px;
     display: flex;
     height: 50px;
     width: 50px;
+}
+.hyper{
+    text-decoration: none;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    font-weight: 900;
+}
+i{
+    margin-right: 4px;
 }
 h3{
     color: white;
@@ -23,7 +36,7 @@ h3{
     padding-bottom: 100px;
     font-weight: 900;
     font-size: 20px;
-    margin-left: 550px;
+    margin-left: 553px;
     margin-top: 30px;
     padding-left: 390px;
     float: right;
@@ -45,74 +58,108 @@ ul li a{
     transition: 0.6s ease;
 }
 li a:hover:not(.active){
-    border-bottom: solid 3px #1762A7;
+    border-bottom: solid 5px #1762A7;
 }   
 footer{
     background-color: #202027;
     height: 9vh;
-    width: 300vh;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
     display: flex;
 }
+#feature1:hover{
+    transform: translateY(-10px);
+}
+#feature2:hover{
+    transform: translateY(-10px);
+}
+#feature3:hover{
+    transform: translateY(-10px);
+}
 .features{
+    cursor: pointer;
     display: flex;
-    margin-top: 40px;
+    padding-top: 2px;
+    padding-bottom: 20px;
+    transition: transform 0.5s;
 }
 #feature1{
     float: left;
     text-align: center;
     margin-top: 40px;
     background-color: #202027;
-    height: 130px;
+    height: 180px;
+    width: 150px;
     margin-right: 30px;
-
+    transition: transform 0.5s;
 }
 #feature2{
     float: left;
     margin-top: 40px;
     margin-right: 30px;
     background-color: #202027;
-    height: 130px;
+    height: 180px;
+    width: 150px;
+    transition: transform 0.5s;
 }
 #feature3{
     float: left;
     margin-top: 40px;
     background-color: #202027;
-    height: 130px;
+    height: 180px;
+    width: 150px;
+    transition: transform 0.5s;
 }
-.text2{
-    font-size: 13px;
+.text2 p{
+    font-size: 23px;
     font-family: Arial, Helvetica, sans-serif;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
     padding-top: 24px;
-}   
-.text3{
-    font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-top: 24px;
-}
-.imgages{
-    height: 8px;
-    width: 8px;
-    padding-top: 20px;
-    margin-top: 10px;
+    color: #fff;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
     text-align: center;
 }   
-.text1{
-    font-size: 13px;
+.text3 p{
+    font-size: 23px;
     font-family: Arial, Helvetica, sans-serif;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 24px;
+    color: #fff;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.png{
+    height: 65px;
+    width: 60px;
+    padding-top: 20px;
+    margin-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    align-items: center;
+}   
+.text1 p{
+    font-size: 23px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-top: 25px;
+    color: #fff;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
 }   
 .content{
     margin-left: 40px;
 }
 #link1{
     display: inline-block;
-    padding-top: 20px;
+    padding-top: 25px;
     padding-bottom:px;
     padding-left: 30px;
     font-size: small;
@@ -120,37 +167,40 @@ footer{
 }
 #link2{
     float: right;
-    padding-left: 700px;
+    padding-left: 600px;
     padding-right: 5px;
-    padding-top: 20px;
-    margin-left: 210px;
+    padding-top: 25px;
+    margin-left: 250px;
     font-size: small;
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
     color: white;
-    line-height: 70px;
+    line-height: 65px;
     size: 72px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
     text-align: left;
-    padding-bottom: 10px;
-    margin-top: 70px;
+    padding-bottom: 8px;
+    margin-top: 8px;
+    padding-top: 3px;
+    padding-bottom: 7px;
 }
-p{
+.para{
     color: #ffffff;
     size: 46px;
     font-weight: 500;
     font-family: Arial, Helvetica, sans-serif;
     text-align: left;
     line-height: 24px;
-    padding-top: 30px;
-    margin-top: 60px;
+    padding-top: 18px;
+    margin-top: 25x;
+    padding-bottom: 20px;
 }
 .containerimages{
     float: right;
-    height: 400px;
-    width: 400px;
+    height: 350px;
+    width: 350px;
     margin-right: 20px;
     margin-bottom: 40px;
 }
