--- a/styles3.css
+++ b/styles3.css
@@ -1,12 +1,14 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container{
     background-color: #2F303A;
-    height: 100vh;
+    height: 91vh;
+    overflow: hidden;
+    background-position: center;
+    background-size: cover;
 }   
 #logo{
     padding-left: 18px;
@@ -15,10 +17,20 @@
     height: 50px;
     width: 50px;
 }
+.hyper{
+    text-decoration: none;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    font-weight: 900;
+}
 h3{
-    margin-top: 15px;
+    color: #fff;
     padding-left: 5px;
-    color: white;
+    padding-top: 15px;
+}
+i{
+    margin-right: 4px;
 }
 .horizonbar{
     list-style-type: none;
@@ -47,46 +59,46 @@ ul li a{
     transition: 0.6s ease;
 }
 li a:hover:not(.active){
-    border-bottom: solid 3px #1762A7;
+    border-bottom: solid 5px #1762A7;
 }   
 footer{
     background-color: #202027;
-    display: flex;
-    width: 300vh;
+    background-position: center;
+    background-size: cover;
     height: 9vh;
+    overflow: hidden;
+    flex-shrink: initial;
 }
 #link1{
     display: inline-block;
-    padding-top: 20px;
-    padding-bottom:px;
+    padding-top: 25px;
+    padding-bottom:30px;
     padding-left: 30px;
     font-size: small;
     font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
 }
-#link2{
-    float: right;
-    padding-left: 900px;
-    padding-right: 5px;
-    padding-top: 20px;
-    padding-bottom: px;
-    font-size: small;
-    font-family: Arial, Helvetica, sans-serif;
+.navlink{
+    align-items: right;
+    padding-left: 400px;
+    margin-left: 450px;
+    padding-top: 25px;
 }
 h1{
     transform: translate(-50%,-50%);
     position: absolute;
     left: 25%;
-    font-size: xx-large;
+    font-size: 50px;
     color: white;
-    bottom: 50%;
-    top: 50%;
-    margin-left: 40px;
-    margin-top: 30px;
+    bottom: 45%;
+    top: 45%;
+    margin-left: 30px;
+    margin-top: 10px;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
 }  
 span{
-    font-size: 50px;
+    font-size: 70px;
     color:mediumvioletred;
 }
 .signupbox{
@@ -95,17 +107,18 @@ span{
     border:#202027 solid 2px;
     border-radius: 10px;
     background-color: #202027;
-    width: 60vh;
-    height: 60vh;
-    margin-top: 40px;
+    width: 53vh;
+    height: 53vh;
+    margin-top: 10px;
     transform: translate(-3%,-3%);
-    top: 150px;
+    top: 100px;
     left: 300px;
 } 
 form{
-    margin: 20px 20px 20px 20px;
+    margin: 15px 15px 15px 15px;
     padding-top: 10px;
-    padding-left: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-bottom: 10px;
 }
 label{
