--- a/styles.css
+++ b/styles.css
@@ -49,8 +49,32 @@ ul li a{
     color: white;
     transition: 0.6s ease;
 }
-li a:hover:not(.active){
+li a:hover{
     border-bottom: solid 5px #1762A7;
+}
+a:hover{
+    color: #1762A7;
+}
+.btn:hover{
+    color: white;
+}
+@media only screen and (max-width: 100px){
+    .logo{
+        height: 50px;
+        width: 50px;
+    }
+    h3{
+        width: 5px;
+    }
+    .bgpics{
+        height: 50px;
+        width: 30px;
+    }
+    .content{
+        width: 50px;
+        height: 50px;
+    }
+
 }
 h1{
     text-align: right;
