--- a/styles2.css
+++ b/styles2.css
@@ -57,7 +57,8 @@ ul li a{
     color: white;
     transition: 0.6s ease;
 }
-li a:hover:not(.active){
+li a:hover{
+    color: #1762A7;
     border-bottom: solid 5px #1762A7;
 }   
 footer{
@@ -173,6 +174,23 @@ footer{
     margin-left: 250px;
     font-size: small;
     font-family: Arial, Helvetica, sans-serif;
+}
+@media only screen and (max-width: 100px){
+    .logo{
+        height: 50px;
+        width: 50px;
+    }
+    h3{
+        width: 5px;
+    }
+    .bgpics{
+        height: 50px;
+        width: 30px;
+    }
+    .content{
+        width: 50px;
+        height: 50px;
+    }
 }
 h1 {
     color: white;
