--- a/styles3.css
+++ b/styles3.css
@@ -58,7 +58,8 @@ ul li a{
     color: white;
     transition: 0.6s ease;
 }
-li a:hover:not(.active){
+li a:hover{
+    color: #1762A7;
     border-bottom: solid 5px #1762A7;
 }   
 footer{
